More Spacing Fixes
Cleaned up the code a bit and made the spacing better

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -100,7 +100,7 @@ hr {
 
 .form-sizing {
   width: 100%;
-  max-width: 1000px;
+  max-width: 830px;
 }
 
 .no-border {
